--- a/backend/public/home/style.css
+++ b/backend/public/home/style.css
@@ -15,7 +15,7 @@ aside{
     height: fit-content;
     position: sticky;
     top: 100px;
-    z-index: -1;
+    /* z-index: -1; */
     
 }
 aside .filter-title{
