--- a/backend/public/product/style.css
+++ b/backend/public/product/style.css
@@ -168,6 +168,9 @@ hr {
   align-self: center;
   margin: 20px;
   border-radius: 20px;
+  height: 500px;
+  object-fit: contain;
+  background-color: var(--background);
 }
 
 .left-container .pictures .some {
